# blokus

blokus/: README.md  package-lock.json  package.json
blokus-backend/: authorization.py  backend.py  board.py  clock.py  gamemanager.py  models.py  piece.py  playerprofile.py  pyproject.toml  socketmanager.py  util.py
blokus/src/: App.vue  generate.sh  main.js  router.js  store.js  utilility.js  utility.js
blokus/src/api/: README.md  package.json
blokus/src/api/.openapi-generator/: FILES
blokus/src/api/docs/: AccessToken.md  BodyPlacePiecePlacePut.md  Coordinate.md  DefaultApi.md  GameConfig.md  GameID.md  GameState.md  HTTPValidationError.md  Message.md  Piece.md  PlayerProfile.md  ValidationError.md
blokus/src/api/src/: ApiClient.js  index.js
blokus/src/api/src/api/: DefaultApi.js
blokus/src/api/src/model/: AccessToken.js  BodyPlacePiecePlacePut.js  PlayerProfile.js
blokus/src/api/test/api/: DefaultApi.spec.js
blokus/src/api/test/model/: AccessToken.spec.js  BodyPlacePiecePlacePut.spec.js  Coordinate.spec.js  GameConfig.spec.js  GameID.spec.js  GameState.spec.js  HTTPValidationError.spec.js  Message.spec.js  Piece.spec.js  PlayerProfile.spec.js  ValidationError.spec.js
blokus/src/components/: Blokus.vue  BoardSquare.vue  GameJoiner.vue  LobbyManager.vue  Piece.vue  PlayerCard.vue  Players.vue
